--- a/3.html
+++ b/3.html
@@ -102,7 +102,7 @@
 		</div>
 		<div class="title">17~36</div>
 		<div class="contents">
-			<img class="dog" src="dog.jpg">
+			<img class="dog" src="https://github.com/albinalee/lab3/blob/main/dog.jpg?raw=true">
 			<div class="Flash">DOG
 			</div>
 		</div>
